<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.unitconverterrevised.converter_fragment.ConverterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_black">
        <TextView
            android:id="@+id/labelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/wendy_one"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@{viewModel.labelText.toString()}"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Converter Fragment"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="6dp"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingTop="20dp"
                android:paddingEnd="6dp"
                android:paddingBottom="20dp">

                <EditText
                    android:id="@+id/baseValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curved_bg"
                    android:hint="@string/enter_base_value"
                    android:inputType="numberDecimal"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/off_white"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/from"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/fromSpinner"
                    app:layout_constraintEnd_toStartOf="@id/fromSpinner"
                    app:layout_constraintTop_toTopOf="@id/fromSpinner" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/fromSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/baseValue" />

                <TextView
                    android:id="@+id/convertedValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/curved_bg"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:text="@{viewModel.convertedValue.toString()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fromSpinner" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/toSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@id/convertedValue"
                    app:layout_constraintStart_toStartOf="@id/convertedValue"
                    app:layout_constraintTop_toBottomOf="@id/convertedValue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/to"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/toSpinner"
                    app:layout_constraintEnd_toStartOf="@id/toSpinner"
                    app:layout_constraintTop_toTopOf="@id/toSpinner" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>